--- a/CommentTranslator/Presentation/TranslatePopup.xaml
+++ b/CommentTranslator/Presentation/TranslatePopup.xaml
@@ -9,7 +9,6 @@
              TextOptions.TextFormattingMode="Display"
              UseLayoutRounding="True"
              MinWidth="120"
-             Focusable="True"
              Initialized="UserControl_Initialized">
     <UserControl.Resources>
         <ResourceDictionary>
@@ -42,8 +41,23 @@
                     <TextBlock Grid.Column="1" Name="tblDirection" Text="Translating..." Padding="3,0,2,3"
                            TextTrimming="WordEllipsis" FontWeight="Bold" VerticalAlignment="Center"/>
                     <StackPanel Grid.Column="2" Orientation="Horizontal" VerticalAlignment="Center">
-                        <Button Name="cmdClose" VerticalAlignment="Bottom"
-                            Click="CmdClose_Click" ToolTip="Close" Margin="2,0,2,2">
+                        <Button Name="btnCopy" VerticalAlignment="Bottom"
+                            Click="btnCopy_Click" ToolTip="Copy" Margin="2,0,2,2" Padding="0">
+                            <Viewbox Stretch="Uniform" Width="14" Height="14" >
+                                <Canvas Width="816" Height="1056" >
+                                    <Path Data="F1 M 0,0 L -493.81,0 C -512.22,0 -524.55,12.33 -524.55,30.9 L -524.55,524.44 C -524.55,543.01 -512.22,555.34 -493.81,555.34
+		L 0,555.34 C 18.41,555.34 30.74,543.01 30.74,524.44 L 30.74,30.9 C 30.74,12.33 18.41,0 0,0 z
+		M -92.55,416.39 C -92.55,425.67 -98.79,431.91 -108.08,431.91 L -385.73,431.91 C -395.01,431.91 -401.1,425.67 -401.1,416.39
+		L -401.1,138.8 C -401.1,129.51 -395.01,123.43 -385.73,123.43 L -108.08,123.43 C -98.79,123.43 -92.55,129.51 -92.55,138.8
+		L -92.55,416.39 z" RenderTransform="1,0,0,1,563.3,343.86" Fill="#ff000000" />
+                                    <Path Data="F1 M 0,0 L -493.65,0 C -512.22,0 -524.55,12.33 -524.55,30.74 L -524.55,92.53 C -524.55,110.94 -512.22,123.43 -493.65,123.43
+		L -108.08,123.43 C -98.79,123.43 -92.55,129.51 -92.55,138.8 L -92.55,524.44 C -92.55,542.85 -80.22,555.18 -61.65,555.18
+		L 0,555.18 C 18.57,555.18 30.9,542.85 30.9,524.44 L 30.9,30.74 C 30.9,12.33 18.57,0 0,0 z" RenderTransform="1,0,0,1,748.4,158.8" Fill="#ff000000" />
+                                </Canvas>
+                            </Viewbox>
+                        </Button>
+                        <Button Name="btnClose" VerticalAlignment="Bottom"
+                            Click="btnClose_Click" ToolTip="Close" Margin="2,0,2,2">
                             <Path
                             Data="F1M54.0573,47.8776L38.1771,31.9974 54.0547,16.1198C55.7604,14.4141 55.7604,11.6511 54.0573,9.94531 52.3516,8.23962 49.5859,8.23962 47.8802,9.94531L32.0026,25.8229 16.1224,9.94531C14.4167,8.23962 11.6511,8.23962 9.94794,9.94531 8.24219,11.6511 8.24219,14.4141 9.94794,16.1198L25.8255,32 9.94794,47.8776C8.24219,49.5834 8.24219,52.3477 9.94794,54.0534 11.6511,55.7572 14.4167,55.7585 16.1224,54.0534L32.0026,38.1745 47.8802,54.0534C49.5859,55.7585 52.3516,55.7572 54.0573,54.0534 55.7604,52.3477 55.763,49.5834 54.0573,47.8776z"
                             Stretch="Uniform" Width="10" Height="10" />
@@ -52,13 +66,13 @@
                 </Grid>
             </Border>
             <!--error-->
-            <Grid Grid.Row="1">
-                <TextBlock x:Name="tblError" Visibility="Collapsed" Padding="3 5" Foreground="Firebrick" TextTrimming="None" TextWrapping="Wrap"/>
-            </Grid>
+            <Border x:Name="bdError" Grid.Row="1" Padding="4 1 4 3" Visibility="Collapsed" Style="{StaticResource MouseOver}" ToolTip="Click to copy" MouseUp="TranslatedText_MouseUp">
+                <TextBlock x:Name="tblError" Foreground="Firebrick" TextTrimming="None" TextWrapping="Wrap"/>
+            </Border>
 
             <!--results-->
-            <Border x:Name="bdTranslatedText" Grid.Row="2" Padding="4 0 4 2">
-                <TextBlock x:Name="tblTranslatedText"  HorizontalAlignment="Stretch" MaxHeight="600" Margin="-1,0,-1,-1" Cursor="IBeam" TextWrapping="Wrap" Text="This is translated text"/>
+            <Border x:Name="bdTranslatedText" Grid.Row="2" Padding="4 1 4 3" Visibility="Collapsed" Style="{StaticResource MouseOver}" ToolTip="Click to copy" MouseUp="TranslatedText_MouseUp">
+                <TextBlock x:Name="tblTranslatedText"  HorizontalAlignment="Stretch" MaxHeight="600" Margin="-1,0,-1,-1" TextWrapping="Wrap" Text="This is translated text"/>
             </Border>
         </Grid>
     </Border>
